react-app/src/components/MatchMessages/MatchMessages.css
.match-messages-container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    height: 80%;
}

.user-messages {
    align-self: flex-end;
    background-color: rgb(233, 233, 233);
    padding: 10px;
    border-radius: 15px;
    margin: 5px;
}

.other-messages {
    align-self: flex-start;
    background-color: #80F;
    color: white;
    padding: 10px;
    border-radius:15px 15px 15px 0;
    margin: 5px;
}

#chat-input-form {
    width: 100%;
    padding: 20px;
}

.chat-input-form-field {
    display: flex;
    justify-content: space-between;
    border: 2px solid #80F;
    height: 50px;
    border-radius: 23px;
}

#chat-input {
    border: none;
    width: 100%;
    border-radius: 23px;
    height: 100%;
    padding: 10px;
}
#chat-input:focus {
    outline: none;
}

.bigger-messages-wrapper {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#chat-send-button {
    margin-right: 10px;
    border-radius: 100%;
    width: 50px;
    height: 45px;
}

#chat-send-button:hover {
    cursor: pointer;
}

.message-item-container {
    display: flex;
}

.fa-trash-can {
    align-self: flex-end;
    margin-right: 10px;
}

.make-first-move {
    align-self: center;
    text-align: center;
    padding: 30px;
}

